# src/backend/src/main/java/shareshop/rest/UsersEndpoints.java
@@ -1,5 +1,8 @@
 package shareshop.rest;
 
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+
 import com.google.gson.Gson;
 import com.google.gson.GsonBuilder;
 
@@ -11,6 +14,7 @@ import shareshop.AppContext;
 import shareshop.User;
 import shareshop.rest.requests.CreateUserRequest;
 import shareshop.rest.requests.CreateUserResponse;
+import shareshop.rest.requests.LoginRequest;
 
 public class UsersEndpoints {
 	
@@ -19,6 +23,7 @@ public class UsersEndpoints {
 	public static void register(Javalin app) {
 		// TODO Auto-generated method stub
 		registerCreate(app);
+		registerLogin(app);
 		registerGet(app);
 		registerModify(app);
 	}
@@ -60,17 +65,70 @@ public class UsersEndpoints {
 		});
 	}
 	
+	private static void registerLogin(Javalin app) {
+		Key ctxKey = new Key<AppContext>("Context");
+		app.post(basepath + "/login", ctx -> {
+			Logger logger = LoggerFactory.getLogger(UsersEndpoints.class);
+			try {
+				Gson gson = new GsonBuilder().excludeFieldsWithoutExposeAnnotation().create();
+				LoginRequest req = gson.fromJson(ctx.body(), LoginRequest.class);
+				if(!req.validate()) {
+					ctx.status(HttpStatus.BAD_REQUEST);
+					return;
+				}
+				
+				User oldusr = RestUtils.getAuthorizedUser(ctx);
+				if(oldusr != null) {
+					// some user is logged in, invalidate that session
+					ctx.req().getSession().invalidate();	// somehow this fails
+					logger.info("User still logged in on login request, loggin out");
+				}
+				
+				AppContext appCtx = (AppContext) ctx.appData(ctxKey);
+				User usr = appCtx.userManager.login(req.username, req.password);
+				if(usr == null) {
+					// login failed for some reason
+					// TODO: maybe respond with a 500 error code for server issues 
+					ctx.status(HttpStatus.UNAUTHORIZED);
+				} else {
+					ctx.req().getSession();	// create the session
+					ctx.req().changeSessionId();
+					ctx.sessionAttribute("AuthorizedUID", usr.getUserID());
+					ctx.status(HttpStatus.OK);
+				}
+				
+				/*ctx.contentType(ContentType.JSON);
+				ctx.result(String.format("{\"id\":\"%s\"}", "59813uuid"));
+				ctx.status(HttpStatus.OK);*/
+			} catch(Exception e) {
+				e.printStackTrace();
+				ctx.status(400);
+			}
+			
+		});
+	}
+	
 	private static void registerGet(Javalin app) {
 		app.get(basepath, ctx -> {
-			// TODO: requires SessionManager to make sense
-			ctx.status(HttpStatus.UNAUTHORIZED);
+			User usr = RestUtils.getAuthorizedUser(ctx);
+			if(usr != null) {
+				// TODO: return actual information
+				ctx.status(HttpStatus.OK);
+			} else {				
+				ctx.status(HttpStatus.UNAUTHORIZED);
+			}
 		});
 	}
 	
 	private static void registerModify(Javalin app) {
 		app.post(basepath, ctx -> {
-			// TODO: requires SessionManager to make sense
-			ctx.status(HttpStatus.UNAUTHORIZED);
+			User usr = RestUtils.getAuthorizedUser(ctx);
+			if(usr != null) {
+				// TODO: process the actual request
+				ctx.status(HttpStatus.OK);
+			} else {				
+				ctx.status(HttpStatus.UNAUTHORIZED);
+			}
 		});
 	}
 	
