# src/backend/src/main/java/shareshop/rest/requests/LoginRequest.java
@@ -1,0 +1,19 @@
+package shareshop.rest.requests;
+
+import com.google.gson.annotations.*;
+
+public class LoginRequest implements RequestBody {
+	@Expose
+	public String username;
+	
+	@Expose
+	public String password;
+
+	@Override
+	public boolean validate() {
+		if(username != null && password != null) {
+			return true;
+		}
+		return false;
+	}
+}
